--- a/manifest.json
+++ b/manifest.json
@@ -1,12 +1,10 @@
 {
-  "name": "Socket.io Debugger",
-  "version": "0.1",
-  "description": "Simple devtool extension for debugging Socket.io by inspecting packets sent to the browser.",
-  "devtools_page": "socket-io.html",
   "manifest_version": 2,
-   "content_security_policy": "default-src 'self'  chrome-extension-resource: ; style-src 'self' 'unsafe-inline'; script-src 'self' 'unsafe-eval';  connect-src *; frame-src *;",
-    "web_accessible_resources":
-    [
-      "*"
-    ]
+  "name": "erngine.io visualizer",
+  "description": "does things",
+  "version": "0.0.1",
+  "devtools_page": "devtools.html",
+  "background": {
+    "page": "background.html"
+  }
 }
