--- a/extension/manifest.json
+++ b/extension/manifest.json
@@ -7,6 +7,9 @@
   "background": {
     "page": "background.html"
   },
+  "permissions": [
+    "webRequest"
+  ],
   "content_scripts": [
     {
       "matches": ["http://en.wikipedia.org/*"],
