--- a/extension/manifest.json
+++ b/extension/manifest.json
@@ -13,7 +13,11 @@
   "content_scripts": [
     {
       "matches": ["<all_urls>"],
-      "js": ["content_script.js"]
+      "js": ["content_script.js"],
+      "run-at": "document-end"
     }
+  ],
+  "web_accessible_resources": [
+    "script/*"
   ]
 }
