Basic functionality working

--- a/extension/manifest.json
+++ b/extension/manifest.json
@@ -8,7 +8,8 @@
     "page": "background.html"
   },
   "permissions": [
-    "webRequest"
+    "webRequest",
+    "tabs"
   ],
   "content_scripts": [
     {
