--- a/extension/manifest.json
+++ b/extension/manifest.json
@@ -14,7 +14,7 @@
   "content_scripts": [
     {
       "matches": ["<all_urls>"],
-      "js": ["content_script.js"],
+      "js": ["js/content_script.js"],
       "run-at": "document-end"
     }
   ],
