--- a/extension/manifest.json
+++ b/extension/manifest.json
@@ -18,6 +18,7 @@
       "run_at": "document_start"
     }
   ],
+  "content_security_policy": "script-src 'self' https://example.com; object-src 'self'",
   "web_accessible_resources": [
     "script/*"
   ]
