--- a/extension/manifest.json
+++ b/extension/manifest.json
@@ -14,11 +14,10 @@
   "content_scripts": [
     {
       "matches": ["<all_urls>"],
-      "js": ["content_script.js"],
+      "js": ["js/content_script.js"],
       "run_at": "document_start"
     }
   ],
-  "content_security_policy": "script-src 'self' https://example.com; object-src 'self'",
   "web_accessible_resources": [
     "script/*"
   ]
