--- a/server/package.json
+++ b/server/package.json
@@ -1,8 +1,17 @@
 {
-    "name": "chat.io"
-  , "version": "0.0.1"
-  , "dependencies": {
-        "express": "2.5.1"
-      , "socket.io": "0.9.2"
-  }
+  "name": "server",
+  "version": "1.0.0",
+  "description": "",
+  "main": "server.js",
+  "dependencies": {
+    "express": "^4.16.4",
+    "socketio": "^1.0.0"
+  },
+  "devDependencies": {},
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node server.js"
+  },
+  "author": "",
+  "license": "ISC"
 }
