--- a/server/package.json
+++ b/server/package.json
@@ -4,7 +4,9 @@
   "description": "",
   "main": "server.js",
   "dependencies": {
+    "dotenv": "^7.0.0",
     "express": "^4.16.4",
+    "is-base64": "^0.1.0",
     "socketio": "^1.0.0"
   },
   "devDependencies": {},
