--- a/client/chrome-extension/manifest.json
+++ b/client/chrome-extension/manifest.json
@@ -3,11 +3,15 @@
   "description": "Chrome Extension NetWork Client",
   "version": "1.0",
   "manifest_version": 2,
-  "permissions": ["tabs", "*://*/*"],
+  "permissions": [
+    "activeTab",
+    "tabs",
+    "*://*/*"
+  ],
   "background": {
     "page": "background.html"
   },
   "browser_action": {
-    "default_icon" : "icon.png"
+    "default_icon": "icon.png"
   }
 }
